--- a/src/GameBuster/View/SettingsWindow.xaml
+++ b/src/GameBuster/View/SettingsWindow.xaml
@@ -3,9 +3,64 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModel="clr-namespace:GameBuster.ViewModel"
         mc:Ignorable="d"
-        Title="SettingsWindow" Height="350" Width="525">
-    <Grid>
+        Title="Settings - Game Buster" 
+        Height="350" 
+        Width="660"
+        MinWidth="660"
+        WindowStartupLocation="CenterScreen"
+        Icon="Icons/Settings.ico">
+    <Window.DataContext>
+        <viewModel:SettingsWindowViewModel />
+    </Window.DataContext>
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ApplicationStylesDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+    <StackPanel Background="{StaticResource Page.Header.OrdinaryPage.BackgroundBrush}">
+        <Label Style="{StaticResource Page.InputPrompt.Label.Style}">Alarm Sound</Label>
+        <Label Style="{StaticResource Page.InputInformation.Label.Style}" 
+                Width="600" 
+                HorizontalAlignment="Left">
+            <AccessText TextWrapping="WrapWithOverflow">
+                This sound will be used to notify about time to get out of games. 
+                If file is not specified or doesn't exist, sound will be chosen 
+                randomly among installed into Windows\Media folder wav files.
+            </AccessText>
+        </Label>
+        <Grid Margin="0 0 20 0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
         
-    </Grid>
+            <TextBox 
+                Style="{StaticResource TextBox.Normal.Style}"
+                Grid.Column="0" 
+                Text="{Binding AlarmSoundFile}" />
+        
+            <Button Style="{StaticResource Button.Normal.Style}"
+                Grid.Column="1"
+                ToolTip="Browse for file..."
+                CommandParameter="{Binding}"
+                Command="{Binding BrowseAlarmFileCommand}" >...</Button>
+        </Grid>
+        
+        <StackPanel Margin="0 15 0 0" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button
+                Margin="0 0 10 0"
+                Style="{StaticResource Button.Normal.Style}"
+                CommandParameter="{Binding}"
+                Command="{Binding AcceptSettingsCommand}">OK</Button>
+            <Button
+                Margin="0 0 20 0"
+                Style="{StaticResource Button.Normal.Style}"
+                CommandParameter="{Binding}"
+                Command="{Binding DeclineSettingsCommand}">Cancel</Button>
+        </StackPanel>
+    </StackPanel>
 </Window>
