--- a/src/GameBuster/View/ApplicationStylesDictionary.xaml
+++ b/src/GameBuster/View/ApplicationStylesDictionary.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib">
+                    xmlns:system="clr-namespace:System;assembly=mscorlib"
+                    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
 
     <Color x:Key="Page.Header.MainText.Color">White</Color>
     <SolidColorBrush x:Key="Page.Header.MainText.Brush" Color="{StaticResource Page.Header.MainText.Color}" />
@@ -46,6 +47,14 @@
     <Style x:Key="Page.Label.Style" TargetType="Label">
         <Setter Property="Foreground" Value="{StaticResource Page.OrdinaryPage.FontForeground}" />
         <Setter Property="FontSize" Value="{StaticResource Page.FontSize}" />
+    </Style>
+
+    <Style x:Key="IntegerUpDown.Normal.Style" TargetType="xctk:IntegerUpDown">
+        <Setter Property="Height" Value="30" />
+        <Setter Property="Margin" Value="32 0 0 0" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="{StaticResource Page.FontSize}" />
+        <Setter Property="MinWidth" Value="115" />
     </Style>
 
     <Style x:Key="TextBox.Normal.Style" TargetType="TextBox">
