+ configure known games

--- a/src/GameBuster/View/NotifyIcon/NotifyIconResources.xaml
+++ b/src/GameBuster/View/NotifyIcon/NotifyIconResources.xaml
@@ -33,7 +33,7 @@
             </MenuItem.Icon>
         </MenuItem>
         <Separator />
-        <MenuItem  Header="i need another 20 minutes to finish that mission!!!" 
+        <MenuItem  Header="I need another 20 minutes to finish that mission!!!" 
                    CommandParameter="{Binding}"
                    Command="{Binding AddMoreTimeCommand}" />
         <Separator />
