--- a/src/GameBuster/View/ApplicationStylesDictionary.xaml
+++ b/src/GameBuster/View/ApplicationStylesDictionary.xaml
@@ -31,27 +31,23 @@
         <Setter Property="FontSize" Value="{StaticResource Page.FontSize}" />
     </Style>
 
-    <Style x:Key="Page.InputPrompt.Label.Style" TargetType="Label">
+    <Style x:Key="Label.Heading1.Style" TargetType="Label">
         <Setter Property="Foreground" Value="{StaticResource Page.OrdinaryPage.FontForeground}" />
         <Setter Property="FontSize" Value="{StaticResource Page.FontSize}" />
         <Setter Property="FontWeight" Value="Bold" />
-        <Setter Property="Margin" Value="32 23 0 0" />
+        <Setter Property="Margin" Value="0 23 0 0" />
     </Style>
 
-    <Style x:Key="Page.InputInformation.Label.Style" TargetType="Label">
+    <Style x:Key="Label.Paragraph.Style" TargetType="Label">
         <Setter Property="Foreground" Value="{StaticResource Page.OrdinaryPage.FontForeground}" />
         <Setter Property="FontSize" Value="{StaticResource Page.InputInformation.FontSize}" />
-        <Setter Property="Margin" Value="32 11 0 0" />
-    </Style>
-
-    <Style x:Key="Page.Label.Style" TargetType="Label">
-        <Setter Property="Foreground" Value="{StaticResource Page.OrdinaryPage.FontForeground}" />
-        <Setter Property="FontSize" Value="{StaticResource Page.FontSize}" />
+        <Setter Property="Margin" Value="0 11 0 0" />
+        <Setter Property="Width" Value="580" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
     </Style>
 
     <Style x:Key="IntegerUpDown.Normal.Style" TargetType="xctk:IntegerUpDown">
         <Setter Property="Height" Value="30" />
-        <Setter Property="Margin" Value="32 0 0 0" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="FontSize" Value="{StaticResource Page.FontSize}" />
         <Setter Property="MinWidth" Value="115" />
@@ -59,7 +55,6 @@
 
     <Style x:Key="TextBox.Normal.Style" TargetType="TextBox">
         <Setter Property="Height" Value="30" />
-        <Setter Property="Margin" Value="32 0 0 0" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="FontSize" Value="{StaticResource Page.FontSize}" />
         <Setter Property="MinWidth" Value="115" />
